# 2dGameEngine

./: .gitignore  CMakeLists.txt  Makefile  log  main.cpp  make.sh
cmake/: FindSDL2_image.cmake
framework/include/: Game.hpp  GameObject.hpp  Vector2D.hpp
framework/include/GameScripts/: GameScript.h
framework/include/camera/: Camera.h
framework/include/components/: Component.hpp  ControllerComponent.h  RendererComponent.hpp  SpriteAnimatorComponent.hpp  TileMapComponent.h
framework/src/: Game.cpp  GameObject.cpp  main.cpp
framework/src/camera/: Camera.cpp
framework/src/components/: ControllerComponent.cpp  RendererComponent.cpp  RigidBodyComponent.cpp  TileMapComponent.cpp  TransformComponent.cpp
game/include/: game_main.h
game/scripts/: AnimationSpriteSelector.h
game/src/: game_main.cpp
game/src/gameObjects/: GameMap.cpp  Player.cpp
include/: Component.hpp  ComponentIdentifier.hpp  Game.hpp  GameObject.hpp  GameTexture.hpp  RendererComponent.hpp  SpriteAnimatorComponent.hpp  TextureComponent.hpp  TransformComponent.hpp  Vector2D.hpp
include/collision/: CollisionManager.h
include/components/: ColliderComponent.h  Component.hpp  ControllerComponent.h  RendererComponent.hpp  RigidBodyComponent.h  SpriteAnimatorComponent.hpp  TextureComponent.hpp  TransformComponent.hpp
include/gameObject/: Floor.h  GameMap.h  Player.h
src/: Component.cpp  ComponentIdentifier.cpp  Game.cpp  GameObject.cpp  GameTexture.cpp  RendererComponent.cpp  SpriteAnimatorComponent.cpp  TextureComponent.cpp  TransformComponent.cpp  Vector2D.cpp  main.cpp
src/collision/: CollisionManager.cpp
src/components/: ColliderComponent.cpp  Component.cpp  ComponentIdentifier.cpp  ControllerComponent.cpp  RendererComponent.cpp  RigidBodyComponent.cpp  SpriteAnimatorComponent.cpp  TextureComponent.cpp  TileMapComponent.cpp  TransformComponent.cpp
src/gameObjects/: Floor.cpp  GameMap.cpp  Player.cpp
